# reveal

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  app.py  check_routes.py  debug_server.py  pyproject.toml  requirements.txt  server.py  setup.py  test_server.py
docs/: contributing.md
extension/: background.js  content_script.js  manifest.json  popup.html  popup.js  styles.css
reveal/abuse/: classifier.py  detector.py  patterns.py  reporter.py
reveal/cryptanalysis/: anomaly.py  entropy.py  ngrams.py
reveal/dictionaries/: geo_words.json  groom_words.json  harm_words.json  help_words.json  prop_dict.json  prop_words.json
reveal/harm/: detector.py  reporter.py  sentiment.py
reveal/linguistic/: pov.py  tone.py  voice.py
reveal/reasoning/: reporter.py  scorer.py
tests/: test_abuse.py  test_anomaly.py  test_entropy.py  test_harm_detector.py  test_ngrams.py  test_pov.py  test_reporter.py  test_scorer.py  test_sentiment.py  test_tone.py  test_voice.py
