[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reveal-nlp"
version = "0.4.0"
description = "Open-source Python library for intelligent harm detection and linguistic analysis in text"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Bonnie Bingham"}
]
keywords = ["nlp", "harm-detection", "linguistic-analysis", "cryptanalysis", "propaganda", "sentiment"]
requires-python = ">=3.9"
dependencies = [
    "nltk>=3.8",
    "textblob>=0.17",
    "scikit-learn>=1.0",
    "numpy>=1.19",
    "pandas>=1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/bbplus3/reveal"
Issues = "https://github.com/bbplus3/reveal/issues"